syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "BattleEventProperty.proto";

message BattleEventBattleInfo {
	uint32 battle_event_id = 1;
	BattleEventProperty status = 2;
}

