syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "BattleRogueMagicScepter.proto";
import "BattleRogueMagicRoundCount.proto";

message BattleRogueMagicData {
	BattleRogueMagicRoundCount round_cnt = 1;
	repeated BattleRogueMagicScepter battle_scepter_list = 2;
}

