syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message DisplayAvatar {
	uint32 avatar_id = 11;
	uint32 pos = 8;
}

