syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message QuickStartCocoonStageCsReq {
	uint32 world_level = 2;
	uint32 cocoon_id = 13;
	uint32 wave = 14;
}

