syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SceneBattleInfo.proto";
import "HitMonsterBattleInfo.proto";

message SceneCastSkillScRsp {
	uint32 attacked_group_id = 15;
	repeated HitMonsterBattleInfo monster_battle_info = 13;
	SceneBattleInfo battle_info = 9;
	uint32 retcode = 14;
}

