syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "SceneBattleInfo.proto";

message StartCocoonStageScRsp {
	SceneBattleInfo BattleInfo = 6;
	uint32 CocoonId = 11;
	uint32 PropEntityId = 1;
	uint32 Wave = 15;
	uint32 Retcode = 2;
}